# miniwin

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  mvcgui.sln
example/: CMakeLists.txt  main.cpp
gui/: CMakeLists.txt
gui/core/: applicarion_impl.cpp  applicarion_impl.h  application.cpp  core_application.cpp  drawer.cpp  drawer.h  object.cpp  object_impl.cpp  object_impl.h  signal.cpp  widget.cpp  widget_impl.cpp  widget_impl.h  widget_p.h  widgets_driver.cpp  widgets_driver.h
gui/delegate/: selection_item_delegate.cpp
gui/delegate/base/: abstract_item_delegate.cpp
gui/internal/: graphic_utils.cpp  graphic_utils.h  widget_engine.cpp  widget_engine.h  widget_tree.cpp  widget_tree.h
gui/io/: font.cpp  input.cpp
gui/model/base/: abstract_list_model.cpp  abstract_table_model.cpp  model_index.cpp
gui/tmp/: abstract_control.cpp  button.cpp  input_text.cpp  selectable.cpp
gui/tools/: algorithm.cpp  graphic_utils.cpp  scope_variable.h
gui/widgets/: button.cpp  checkbox.cpp  input_text.cpp  selectable.cpp  text.cpp  window.cpp  window_impl.cpp  window_impl.h
gui/widgets/base/: abstract_button.cpp  abstract_control.cpp
gui/widgets/view/: list_view.cpp  table_view.cpp
gui/widgets/view/base/: abstract_item_view.cpp
gui/widgets/widget/: checkbox.cpp  combobox.cpp  text.cpp  window.cpp
gui/widgets/widget/base/: abstract_button.cpp  abstract_control.cpp  abstract_window.cpp
include/fugui/core/: application.h  core_application.h  drawer.h  flags.h  object.h  objectdefs.h  signal.h  widget.h
include/fugui/delegate/: selection_item_delegate.h
include/fugui/io/: font.h  input.h
include/fugui/model/: standard_list_model.h  standard_table_model.h
include/fugui/tools/: algorithm.h  container.h  macro.h  property.h  scope_variable.h
include/fugui/widgets/: button.h  checkbox.h  input_text.h  selectable.h  text.h  window.h
include/miniwin/: defs.h
include/miniwin/core/: application.h  drawer.h  event_mgr.h  flags.h  global.h  imgui.h  imgui_flags.h  imgui_helper.h  io.h  main_window.h  object.h  objectdefs.h  platform_window.h  widget.h  widgetid_pool.h
include/miniwin/delegate/: selectable_item_delegate.h  selection_item_delegate.h  table_header_item_delegate.h
include/miniwin/global/: defs.h
include/tmp/: abstract_control.h  input_text.h  selectable.h
src/: CMakeLists.txt
src/core/: application.cpp  drawer.cpp  flags.cpp  object.cpp  widget.cpp  winutils.cpp
src/delegate/: selection_item_delegate.cpp
src/io/: font.cpp  input.cpp
src/model/: standard_list_model.cpp  standard_table_model.cpp
src/tools/: algorithm.cpp  container.cpp
win/: CMakeLists.txt  miniwinConfig.cmake.in
win/core/: applicarion_impl.cc  applicarion_impl.cpp  applicarion_impl.h  application.cc  application.cpp  application_d3d11.cc  application_glfw_opengl3.cc  application_impl.cc  application_impl.h  drawer.cc  drawer.cpp  drawer.h  event_mgr.cc  flags.cc  imgui.cc  imgui_cast.cc  imgui_cast.h  imgui_helper.cc  imgui_src_include.cc  io.cc  main_window.cc  main_window_dx11.cc  main_window_dx11.h  main_window_impl.cc  main_window_impl.h  object.cc  object.cpp  object_impl.cc  object_impl.cpp  object_impl.h  platform_window.cc  platform_window_dx11.cc  platform_window_dx11.h  platform_window_impl.cc  platform_window_impl.h  widget.cc  widget.cpp  widget_impl.cc  widget_impl.cpp  widget_impl.h  (+4 more)
win/delegate/: selectable_item_delegate.cc  selectable_item_delegate_impl.cc  selectable_item_delegate_impl.h  selection_item_delegate.cc  selection_item_delegate.cpp  table_header_item_delegate.cc
win/delegate/base/: abstract_item_delegate.cc  abstract_item_delegate.cpp
win/global/: defs.cc
win/io/: font.cpp  input.cc  input.cpp  scene.cc
win/model/: item_selection_model.cc  item_selection_model.cpp  item_selection_model_impl.cc  item_selection_model_impl.cpp  item_selection_model_impl.h  standard_item_model.cc  standard_item_model.cpp  standard_item_model_impl.cc  standard_item_model_impl.cpp  standard_item_model_impl.h
win/model/base/: abstract_item_model.cc  abstract_item_model.cpp  model_index.cc  model_index.cpp
win/tools/: container.cc  container.cpp  converter.cc  debug.cpp  debug.h  easy_window.cc  easy_window.h  easy_window_win32.cc  easy_window_win32.h  file.cc  graphic.cc  graphic_glfw.cc  graphic_utils.cc  graphic_utils.cpp  graphic_utils.h  graphic_utils_glfw.cc  graphic_utils_win.cc  graphic_win.cc  inner.h  list.cc  mathf.cc  mutex_pool.cc  platform_easy_window.cc  platform_easy_window.h  platform_easy_window_dx11.cc  platform_easy_window_dx11.h  platform_easy_window_impl.cc  platform_easy_window_impl.h  regex.cc  string.cc  stringlist.cc  variant.cc  vector2d.cc
win/widgets/: Integer_edit.cc  button.cc  button.cpp  button_impl.cc  button_impl.h  checkbox.cc  checkbox.cpp  checkbox_impl.cc  checkbox_impl.h  combobox.cc  combobox_impl.cc  combobox_impl.h  combobox_view.cc  combobox_view.h  combobox_view_impl.cc  combobox_view_impl.h  dialog.cc  file_dialog.cc  frame.cc  header_view.cc  header_view_impl.cc  header_view_impl.h  headerview.cc  headerview_impl.cc  headerview_impl.h  input_text.cc  input_text.cpp  input_text_impl.cc  input_text_impl.h  label.cc  list_widget.cc  listview.cc  listview_impl.h  message_box.cc  number_edit.cc  selectable.cc  selectable.cpp  selectable_impl.cc  selectable_impl.h  table_view.cc  (+20 more)
win/widgets/base/: abstract_button.cc  abstract_button.cpp  abstract_control.cc  abstract_control.cpp  abstract_control_impl.cc  abstract_control_impl.h  abstract_item_view.cc  abstract_item_view.cpp  abstract_item_view_impl.cc  abstract_item_view_impl.h
win/widgets/layout/: box_layout.cc  box_layout_impl.cc  box_layout_impl.h  boxlayout.cc  boxlayout_impl.cc  boxlayout_impl.h  layout.cc
win/widgets/view/: combobox_view.cc  header_view.cc  headerview.cc  headerview_impl.cc  headerview_impl.h  list_view.cc  list_view_impl.cc  list_view_impl.h  listview.cc  listview_impl.cc  listview_impl.h  table_view.cc  table_view_impl.cc  table_view_impl.h  tableview.cc  tableview_impl.cc  tableview_impl.h
(+182 files in other folders)
